--- a/index.css
+++ b/index.css
@@ -21,6 +21,9 @@ h1 {
   background-size: 100% 100%;
   display: block;
   margin: 5% auto;
+   border: 5px double lightsteelblue;
+  border-radius: 30px;
+  box-shadow: 10px 10px 10px rgb(64, 60, 60);
 }
 .fa-solid {
   font-size: 50px;
